# xendros-bot

./: main.py  pyproject.toml  requirements.txt
cogs/: _shopkeeping.py  commands.py  error_display.py  events.py  x_diceroll.py  x_error.py  x_gacha.py  x_shopkeeping.py  xendros.py
cogs/modules/: x_diceroll.py  x_error.py  x_gacha.py  x_shopkeeping.py
cogs/old/: _json.py  _shopkeeping.py
data/: char_data.json  char_data.sqlite  rare.json  shops.json  uncommon.json  user_chars.sqlite
data/dump/: char_data_31_10_20_Oct_10_1604114222.csv  user_chars_21_10_20_Oct_10_1603248210.csv
data/raw/: Kallista Xendros-41faef61ff65.json
